# c_tools

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  coverage.sh  run-debug.bat  run-debug.sh  sonar-project.properties
.github/workflows/: build.yml
include/: tools.h
include/collect/: linked_list_tools.h  stack_tools.h
include/string/: string_tools.h
include/time/: time_tools.h
src/: tools.c
src/collect/: linked_list_tools.c  stack_tools.c
src/string/: string_tools.c
src/time/: time_tools.c
test/time_test/: time_test.c
tests/: main.c
tests/collect_test/: linked_list_test.c  linked_list_test.h  stack_test.c  stack_test.h
tests/string_test/: string_test.c  string_test.h
tests/time_test/: time_test.c  time_test.h
tools-debug/: CMakeLists.txt  README.md  build-debug.bat  build-debug.sh  main.c
tools-debug/string_test/: string_test.c  string_test.h
tools-debug/time_test/: time_test.c  time_test.h
